updated the site structure to match Kates outline

--- a/_config.yml
+++ b/_config.yml
@@ -9,15 +9,15 @@ collections:
     permalink: /:path/
 
 # Title
-name: CDS + PSPC
-subtitle: Single Point of Access
+name: Booking Discovery Documentation
+subtitle: Documenting CDS's Discovery into Booking
 
 # When using this template with a project page set the baseurl to '/project-name'
 # For user/organization pages set this to an empty string
 # When working locally use jekyll serve --baseurl '' so that you can view everything at localhost:4000
 # See http://jekyllrb.com/docs/github-pages/ for more info
 #baseurl: ''
-baseurl: '/pspc-documentation'
+baseurl: '/booking-documentation'
 
 # Author/Organization info to be displayed in the templates
 author:
